--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {  
-  background-image: linear-gradient(90deg, rgb(117, 170, 219) 33%, white 33%, white 66.66%, rgb(117, 170, 219) 66.66%);
+  background-image: linear-gradient(90deg, rgb(255, 251, 0) 33%, white 33%, rgb(234, 255, 0) 66.66%, rgb(255, 251, 0) 66.66%);
   text-align: center;
 }
 #video {
@@ -79,7 +79,7 @@ li {
 
 h1 {
   font-size: 40px;
-  color: yellow;
+  color: black;
 }
 
 .logo {
@@ -107,14 +107,11 @@ animation: vuelta 4s;
   position: absolute;
   top: 200PX;
   left: 20px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bolder;
   text-align: center;
-  color: yellow;
-  border-radius: 10px;
-  padding: 12px;
-  border: 3px solid black;
-  background-color: rgba(23, 22, 10, 0.569);
+  color: black;
+
 }
 
 .milei {
@@ -142,16 +139,12 @@ animation: vuelta 4s;
   font-size: 25px;
 }
 .milei2023 {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: bolder;
   position: absolute;
-  color: yellow;
-  padding: 12px;
-  border: 3px solid black;
-  background-color: rgba(23, 22, 10, 0.569);
-  border-radius: 20px;
-  right: 70px;
-  bottom: 220px;
+  color: black;
+  right: 30px;
+  bottom: 200px;
 }
 
 .llora {
@@ -172,11 +165,7 @@ animation: vuelta 4s;
   font-size: 20px;
   font-weight: bold;
   text-align: justify;
-  color: yellow;
-  padding: 12px;
-  border: 3px solid black;
-  background-color: rgba(23, 22, 10, 0.569);
-  border-radius: 20px;
+  color: black;
 }
 span {
   font-size: 25px;
@@ -257,11 +246,8 @@ h4 a {
 .container {
   margin-top: 100px;
   margin-bottom: 500px;
-  color: yellow;
-  padding: 12px;
-  border: 3px solid black;
-  background-color: rgba(23, 22, 10, 0.569);
-  border-radius: 20px;
+  color: black;
+ 
 }
 
 .cont {
